@@ -1,5 +1,14 @@
 2016-04-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	PR2917: Don't pass --with-cacerts-file to
+	build if USE_ALT_CACERTS_FILE is not set
+	* Makefile.am:
+	(ICEDTEA_CONFIGURE): Only pass --with-cacerts-file
+	if USE_ALT_CACERTS_FILE is set.
+	* NEWS: Updated.
+
+2016-04-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	PR2916: Update CACAO drop to use the latest
 	from cacao-staging
 	* patches/cacao/pr2032.patch,
